--- a/styles.css
+++ b/styles.css
@@ -2127,4 +2127,12 @@ i{
     .carousel-card-info-left{
         width: 100%;
     }
+
+    #about{
+        max-width: 100%;
+        /* height: min-content; */
+        background-position: top;
+        padding: 73px 20px;
+        /* background-color: #fff; */
+    }
 }
