correction in sidebar navigation a tags added

--- a/pages/projects.css
+++ b/pages/projects.css
@@ -223,6 +223,10 @@ body::-webkit-scrollbar-thumb {
     /* background-color: purple; */
 }
 
+#menu a{
+    text-decoration: none;
+}
+
 .menu-item {
     cursor: pointer;
 }
@@ -251,7 +255,7 @@ i {
     padding-left: 1px;
 }
 
-.menu-item a {
+.menu-item p {
     text-decoration: none;
     font-family: "Manrope", serif;
     font-optical-sizing: auto;
@@ -289,7 +293,7 @@ i {
     font-weight: 100;
 }
 
-#Projects .menu-item-cont a {
+#Projects .menu-item-cont p {
     text-decoration: none;
     font-family: "Manrope", serif;
     font-optical-sizing: auto;
@@ -304,7 +308,7 @@ i {
     background-color: #1c1f1ec3;
 }
 
-.menu-item:hover a {
+.menu-item:hover p {
     color: #ffffff;
 }
 
@@ -316,7 +320,7 @@ i {
     padding-top: 30px;
 }
 
-#menu-bottom p {
+#menu-bottom > p {
     font-family: "Manrope", serif;
     font-optical-sizing: auto;
     font-weight: 400;
