--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,22 @@
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: sans-serif;
-font-size: 14px;
-color: #FFFFFF;
-text-rendering: optimizeSpeed;
-text-rendering: optimizeLegibility;
-text-rendering: geometricPrecision;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    font-size: 14px;
+    color: #FFFFFF;
+    text-rendering: optimizeSpeed;
+    text-rendering: optimizeLegibility;
+    text-rendering: geometricPrecision;
 }
  
 html, body{
-height: 100%;
-width: 100%;
-background-color: #141414;
-user-select: none;
--webkit-font-smoothing: antialiased;
+    height: 100%;
+    width: 100%;
+    background-color: #141414;
+    user-select: none;
+    -webkit-font-smoothing: antialiased;
+    scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar{
