--- a/pages/contact.css
+++ b/pages/contact.css
@@ -439,3 +439,490 @@ i {
     cursor: pointer;
 }
 
+/* Main container */
+#main-container {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    margin-left: 260px;
+    right: 0;
+    height: 1000px;
+    display: flex;
+    flex-direction: column;
+    /* flex-wrap: nowrap; */
+    align-items: center;
+    /* justify-content: center; */
+    z-index: 2;
+    /* background-color: red; */
+}
+
+
+/* blur gradient */
+#blur-gradient {
+    position: fixed;
+    height: 156px;
+    width: 100vw;
+    left: 0;
+    bottom: 0px;
+    pointer-events: none;
+    z-index: 30;
+    pointer-events: none;
+    /* background-color: red; */
+}
+
+.blur-gradient-1 {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 31;
+    inset: 0px;
+    backdrop-filter: blur(0.125px);
+    mask-image: linear-gradient(rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 12.5%, rgb(0, 0, 0) 25%, rgba(0, 0, 0, 0) 37.5%);
+    border-radius: 0px;
+    pointer-events: none;
+    /* background-color: #fff; */
+}
+
+.blur-gradient-2 {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 32;
+    inset: 0px;
+    backdrop-filter: blur(0.25px);
+    mask-image: linear-gradient(rgba(0, 0, 0, 0) 12.5%, rgb(0, 0, 0) 25%, rgb(0, 0, 0) 37.5%, rgba(0, 0, 0, 0) 50%);
+    border-radius: 0px;
+    pointer-events: none;
+    /* background-color: #fff; */
+}
+
+.blur-gradient-3 {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 33;
+    inset: 0px;
+    backdrop-filter: blur(0.5px);
+    mask-image: linear-gradient(rgba(0, 0, 0, 0) 25%, rgb(0, 0, 0) 37.5%, rgb(0, 0, 0) 50%, rgba(0, 0, 0, 0) 62.5%);
+    border-radius: 0px;
+    pointer-events: none;
+    /* background-color: #fff; */
+}
+
+.blur-gradient-4 {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 34;
+    inset: 0px;
+    backdrop-filter: blur(1px);
+    mask-image: linear-gradient(rgba(0, 0, 0, 0) 37.5%, rgb(0, 0, 0) 50%, rgb(0, 0, 0) 62.5%, rgba(0, 0, 0, 0) 75%);
+    border-radius: 0px;
+    pointer-events: none;
+    /* background-color: #fff; */
+}
+
+.blur-gradient-5 {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 35;
+    inset: 0px;
+    backdrop-filter: blur(2px);
+    mask-image: linear-gradient(rgba(0, 0, 0, 0) 50%, rgb(0, 0, 0) 62.5%, rgb(0, 0, 0) 75%, rgba(0, 0, 0, 0) 87.5%);
+    border-radius: 0px;
+    pointer-events: none;
+    /* background-color: #fff; */
+}
+
+.blur-gradient-6 {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 36;
+    inset: 0px;
+    backdrop-filter: blur(4px);
+    mask-image: linear-gradient(rgba(0, 0, 0, 0) 62.5%, rgb(0, 0, 0) 75%, rgb(0, 0, 0) 87.5%, rgba(0, 0, 0, 0) 100%);
+    border-radius: 0px;
+    pointer-events: none;
+    /* background-color: #fff; */
+}
+
+.blur-gradient-7 {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 37;
+    inset: 0px;
+    backdrop-filter: blur(8px);
+    mask-image: linear-gradient(rgba(0, 0, 0, 0) 75%, rgb(0, 0, 0) 87.5%, rgb(0, 0, 0) 100%);
+    border-radius: 0px;
+    pointer-events: none;
+    /* background-color: #fff; */
+}
+
+.blur-gradient-8 {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 38;
+    inset: 0px;
+    backdrop-filter: blur(16px);
+    mask-image: linear-gradient(rgba(0, 0, 0, 0) 87.5%, rgb(0, 0, 0) 100%);
+    border-radius: 0px;
+    pointer-events: none;
+    /* background-color: #fff; */
+}
+
+
+
+
+
+
+
+
+
+
+
+/* navbar */
+#navbar-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100px;
+    width: 100%;
+    z-index: 10;
+    background: linear-gradient(rgb(20, 20, 20) 72%, rgba(105, 105, 105, 0) 100%) rgba(0, 0, 0, 0);
+    /* background-color: rgb(81, 42, 42); */
+    display: flex;
+    justify-content: center;
+    display: none;
+}
+
+#header-toggle-menu-cont {
+    position: relative;
+    height: 49.3px;
+    max-width: 100%;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 15px;
+    /* background-color: rgba(0, 0, 255, 0.617); */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#header-image-name {
+    height: 100%;
+    width: 220px;
+    /* background-color: #ffffff70; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#header-toggle-menu-cont i {
+    font-size: 28px;
+    color: rgb(255, 255, 255);
+    margin-bottom: 1px;
+    display: block;
+}
+
+#header-name-nav {
+    height: 20px;
+    width: 100%;
+}
+
+#header-status-nav {
+    height: 20px;
+    width: 100%;
+}
+
+#header-name-nav h1 {
+    font-family: "Reenie Beanie", serif;
+    font-size: 22px;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: -0.7px;
+}
+
+#header-status-nav p {
+    color: #909193;
+    font-family: "Manrope", serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 15px;
+    letter-spacing: -0.8px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* media queries */
+
+/* for tablets */
+@media only screen and (min-width: 810px) and (max-width: 999px) {
+    #sidebar-container {
+        display: none;
+    }
+
+    #navbar-container {
+        display: block;
+    }
+
+    #main-container {
+        margin-left: 0px;
+        height: min-content;
+    }
+
+    #projects{
+        max-width: 100%;
+        height: min-content;
+    }
+    #work {
+        margin-top: 55px;
+        height: min-content;
+        background-position: top;
+        padding: 70px 40px;
+    }
+
+    #work-carousel-container {
+        height: 100%;
+        /* background-color: red; */
+    }
+
+    #carousel ul {
+        flex-direction: column;
+        padding-right: 0px;
+        mask-image: none;
+    }
+
+    #carousel ul li {
+        height: 70vw;
+        width: 100%;
+    }
+
+    #carousel ul li a {
+        width: 100%;
+    }
+
+    .carousel-card-bottom{
+        padding: 0px 0px;
+    }
+
+    .carousel-card-image-cont {
+        height: 60vw;
+    }
+
+    .carousel-card-info {
+        width: 100%;
+        margin: 0px 20px;
+        margin-bottom: 5px;
+    }
+
+    .carousel-card-info-left {
+        width: 100%;
+    }
+
+}
+
+/* for mobile */
+@media only screen and (min-width: 420px) and (max-width:810px) {
+    #sidebar-container {
+        display: none;
+    }
+
+    #navbar-container {
+        display: block;
+    }
+
+    #header-toggle-menu-cont {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    #header-image-name {
+        width: 210px;
+    }
+
+    #header-name-nav h1 {
+        font-family: "Reenie Beanie", serif;
+        font-size: 21px;
+        font-weight: 400;
+        font-style: normal;
+        letter-spacing: -1px;
+    }
+
+    #header-status-nav p {
+        color: #909193;
+        font-family: "Manrope", serif;
+        font-optical-sizing: auto;
+        font-weight: 700;
+        font-style: normal;
+        font-size: 15px;
+        letter-spacing: -1px;
+    }
+
+    #main-container {
+        margin-left: 0px;
+        height: min-content;
+    }
+
+    #projects {
+        max-width: 100%;
+        height: min-content;
+    }
+
+    #work {
+        margin-top: 55px;
+        height: min-content;
+        background-position: top;
+        padding: 70px 20px;
+    }
+
+    #work-carousel-container {
+        height: 100%;
+        /* background-color: red; */
+    }
+
+    #carousel ul {
+        flex-direction: column-reverse;
+        padding-right: 0px;
+        mask-image: none;
+    }
+
+    #carousel ul li {
+        height: 75vw;
+        width: 100%;
+    }
+
+    #carousel ul li a {
+        width: 100%;
+    }
+
+    .carousel-card-bottom{
+        padding: 0px 0px;
+    }
+
+    .carousel-card-image-cont {
+        height: 64.5vw;
+    }
+
+    .carousel-card-info {
+        width: 100%;
+        margin: 0px 20px;
+        margin-bottom: 5px;
+    }
+
+    .carousel-card-info-left {
+        width: 100%;
+    }
+
+}
+
+
+@media only screen and (max-width: 420px) {
+    #sidebar-container {
+        display: none;
+    }
+
+    #navbar-container {
+        display: block;
+    }
+
+    #header-toggle-menu-cont {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    #header-image-name {
+        width: 210px;
+    }
+
+    #header-name-nav h1 {
+        font-family: "Reenie Beanie", serif;
+        font-size: 21px;
+        font-weight: 400;
+        font-style: normal;
+        letter-spacing: -1px;
+    }
+
+    #header-status-nav p {
+        color: #909193;
+        font-family: "Manrope", serif;
+        font-optical-sizing: auto;
+        font-weight: 700;
+        font-style: normal;
+        font-size: 15px;
+        letter-spacing: -1px;
+    }
+
+    #main-container {
+        margin-left: 0px;
+        height: min-content;
+    }
+
+    #projects {
+        height: min-content;
+        max-width: 100%;
+    }
+
+    #work {
+        margin-top: 55px;
+        height: min-content;
+        background-position: top;
+        padding: 70px 20px;
+    }
+
+    #work-carousel-container {
+        height: 100%;
+        /* background-color: red; */
+    }
+
+    #carousel ul {
+        flex-direction: column-reverse;
+        padding-right: 0px;
+        mask-image: none;
+    }
+
+    #carousel ul li {
+        height: 80.5vw;
+        width: 100%;
+    }
+
+    #carousel ul li a {
+        width: 100%;
+    }
+
+    .carousel-card-bottom{
+        padding: 0px 0px;
+    }
+
+    .carousel-card-image-cont {
+        height: 62vw;
+    }
+
+    .carousel-card-info {
+        width: 100%;
+        margin: 0px 15px;
+        margin-bottom: 5px;
+    }
+
+    .carousel-card-info-left {
+        width: 100%;
+    }
+
+}
